--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -525,6 +525,7 @@
     "Division.monsterMaroon.helmEngineering": "Helm/Engineering",
     "Division.monsterMaroon.medical": "Medical",
     "Division.monsterMaroon.security": "Security",
+    "Division.monsterMaroon.specialServices": "Special Services",
     "Division.monsterMaroon.trainee": "Trainee",
 
     "Era.name.enterprise": "Enterprise (22nd century)",
