--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -664,6 +664,7 @@
     "NoseType.smallFlat": "Small, Flat",
     "NoseType.smallUpTurned": "Small, Up-turned",
     "NoseType.hawk": "Hawk",
+    "NoseType.broadFlat": "Broad, Flat, Pronounced Nostrils",
 
     "NpcType.minor.name": "Minor NPC",
 
