--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -565,6 +565,7 @@ NoseType.bulbous,Bulbous,,,
 NoseType.smallFlat,"Small, Flat",,,
 NoseType.smallUpTurned,"Small, Up-turned",,,
 NoseType.hawk,Hawk,,,
+NoseType.broadFlat,"Broad, Flat, Pronounced Nostrils",,,
 NpcType.minor.name,Minor NPC,Einfacher NSC,,PNJ Mineur
 NpcType.notable.name,Notable NPC,Bedeutender NSC,,PNJ Notable
 NpcType.major.name,Major NPC,Herausragender NSC,,PNJ Majeur
