Add a Voyager/DS9 version of the uniform, initial work on Caitians

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -873,6 +873,7 @@
     "UniformEra.monsterMaroon": "The Wrath of Khan",
     "UniformEra.dominionWar": "Dominion War",
     "UniformEra.lowerDecks": "Lower Decks",
+    "UniformEra.voyagerDS9": "Voyager/DS9",
 
     "Value.environment.text": "This Value should reflect the environment and culture the character was raised within. This is a good opportunity to consider how the character views their own culture, and how they connect — or possibly, don’t connect — to the philosophies and traditions of their people.",
 
