--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -32,6 +32,7 @@ TokenCreator.section.body.type,Body Type,Körpertyp,,
 TokenCreator.section.body.uniformVariant,Uniform Variant,Uniformvariante,,
 TokenCreator.section.head,Head,Kopf,,
 TokenCreator.section.head.colour,Skin Colour,Hautfarbe,,
+TokenCreator.section.head.furColour,Fur Colour,,,
 TokenCreator.section.head.shape,Head Shape,Kopfform,,
 TokenCreator.section.hair,Hair,Haar,,
 TokenCreator.section.hair.colour,Hair Colour,Haarfarbe,,
